# Okonf

./: Dockerfile  Pipfile  README.md  pyproject.toml  run_tests.sh  run_tests_docker.sh  setup.py
examples/: setup_container_website.py  setup_static_website.py
okonf/: __init__.py  __main__.py  run.py  tubes.py  utils.py
okonf/connectors/: __init__.py  abstract.py  exceptions.py  local.py  lxd.py  ssh.py
okonf/contracts/: __init__.py  apt.py  files.py  lxd.py
okonf/facts/: __init__.py  abstract.py  apt.py  collections.py  docker.py  files.py  flatpak.py  git.py  ip.py  lxd.py  multiple.py  python.py  systemd.py  users.py
okonf/modules/: abstract.py  apt.py  collections.py  files.py  git.py  lxd.py  python.py  users.py
requirements/: latest.txt  tests.txt
tests/: test_utils.py
tests/connectors/: test_ssh.py
tests/facts/: test_abstract.py  test_apt.py  test_files.py  test_flatpak.py  test_git.py  test_python.py  test_users.py
tests/modules/: test_abstract.py  test_apt.py  test_files.py  test_git.py  test_python.py  test_users.py
